testsuite/tests/properties/invalid_matchers/missing_nullnode/test.lkt
from common import BodyNode, Expression, FooNode, NullNode, Number

class ExampleNode: FooNode {
    @parse_field body: BodyNode

    fun prop(): Int = match node.body {
        case e: Expression => e.prop()
    }
}
